k8s/local/sse-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sse-timeouts
  namespace: default
spec:
  forwardAuth: {}
